fix routes, fix scrollbar-x, fix colors

--- a/components/catalog/catalog.module.css
+++ b/components/catalog/catalog.module.css
@@ -58,6 +58,7 @@
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
+    color: #000;
     line-height: 22px;
 }
 
@@ -78,7 +79,7 @@
     font-weight: bold;
     font-size: 24px;
     line-height: 29px;
-    color: var(--btn-color);
+    color: var(--btn-color);    
 }
 .best_center {
     margin-left: 15px;
